<resources>
    <string name="app_name">صكوك</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">بحث متقدم</string>
    <string name="search_type">نوع البحث</string>
    <string name="building_type">نوع العقار</string>
    <string name="area">المنطقة</string>
    <string name="government">المحافظة</string>
    <string name="district">الحى</string>
    <string name="initial_price">السوم</string>
    <string name="end_price">الحد</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_us">من نحن</string>
    <string name="settings">الإعدادات</string>
    <string name="favorite">المفضلة</string>
    <string name="add_ads">إضافة إعلان</string>
    <string name="my_adds">إعلاناتى</string>
    <string name="all_ads">كل الإعلانات</string>
    <string name="map">الخريطة</string>
    <string name="regions">المناطق</string>
    <string name="search">البحث</string>
    <string name="all">الكل</string>
    <string name="load">loading</string>
    <string name="skok">صكوك</string>
    <string name="name">"    الاسم"</string>
    <string name="email">"   الايميل"</string>
    <string name="message">الرسالة</string>
    <string name="send">ارسال</string>
    <string name="insert_name">من فضلك ادخل اسمك</string>
    <string name="insert_message">من فضلك ادخل الرسالة</string>
    <string name="advanced_search">بحث متقدم</string>
    <string name="search_btn">بحث</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email_arabic">"   البريد الالكترونى   "</string>
    <string name="password">"   كلمة المرور    "</string>
    <string name="login_btn">الدخول</string>
    <string name="forget_pass">نسيت كلمة المرور</string>
    <string name="register_btn">تسجيل</string>
    <string name="register">تسجيل جديد</string>
    <string name="user_name">"     اسم المستخدم    "</string>
    <string name="mobile_num">"   رقم الجوال   "</string>
    <string name="request_password">استرجاع كلمة المرور</string>
    <string name="request_password_btn">استرجاع</string>
    <string name="puplih_your_ad">انشر إعلانك العقارى</string>
    <string name="published_user">اسم المعلن</string>
    <string name="published_phone">جوال المعلن</string>
    <string name="published_email">البريد الإلكترونى للمعلن</string>
    <string name="published_area">المساحة</string>
    <string name="area_details">المساحة :</string>
    <string name="min_cost">الحد :</string>
    <string name="max_cost">السوم :</string>
    <string name="search_result">نتائج البحث</string>
    <string name="details">تفاصيل</string>
    <string name="another_details">تفاصيل اخرى</string>
    <string name="change">تغيير</string>
    <string name="delete">حذف</string>
    <string name="save">حفظ</string>
    <string name="my_favorite">المفضلة</string>
    <string name="insert_phone">ادخل رقم الهاتف</string>
    <string name="insert_userName"> ادخل اسم المستخدم</string>
    <string name="insert_password"> ادخل كلمة السر</string>
    <string name="insert_correct_email">ادخل بريد الكترونى صحيح</string>
    <string name="insert_email">ادخل بريد الكترونى </string>
    <string name="favorite_added">تمت اضافة الإعلان للمفضلة</string>
    <string name="favorite_delete">تم حذف الإعلان للمفضلة</string>
    <string name="add_image">اضغط لإضافة صور للإعلان</string>
    <string name="send_request">ارسال طلب</string>
    <string name="delete_image">هل ترعب فى حذف الصورة</string>
    <string name="sure">تأكيد الحذف</string>
    <string name="no">الغاء</string>
    <string name="insert_value">اختار قيمة من القائمه</string>
    <string name="insert_district">ادخل الحى</string>
    <string name="insert_price">ادخل السوم</string>
    <string name="insert_edge">ادخل الحد</string>
    <string name="insert_details">ادخل التفاصيل</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_ads">لا يوجد اعلانات قمت بإضافتها</string>
    <string name="no_ads_in_favorite">لايوجد اعلانات فى قائمة المفضلة</string>
    <string name="no_serach_result">لا يوجد نتائج للبحث</string>
    <string name="insert_area">ادخل المساحه</string>
    <string name="need_login">يجب تسجيل الدخول اولا</string>
    <string name="contacts">للتواصل</string>
    <string name="no_internet">برجاء الاتصال بالانترنت</string>
    <string name="exsit_app">هل ترغب فى اغلاق التطبيق</string>


</resources>
