<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_ads"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/all_ads" />
        <item
            android:id="@+id/nav_my_adds"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/my_adds" />
        <item
            android:id="@+id/nav_add_ads"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/add_ads" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/keyboard_arrow_left"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/keyboard_arrow_left"
            
            android:title="@string/contact_us" />

    </group>



</menu>
