<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rel"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingStart="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"

        android:paddingBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/settings"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:src="@drawable/settings"/>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="end">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/settings"/>
<RelativeLayout
    android:layout_width="0dp"
    android:layout_weight="0.8"
    android:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
             android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/person_outline"
                android:layout_height="@dimen/_55sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:text="@string/delete"/>
                <TextView
                    android:id="@+id/txtChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:textColor="@color/blue"
                    android:text="@string/change"/>
            </RelativeLayout>
        </LinearLayout>
</RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_corner"
        android:drawableEnd="@drawable/person_outline"
        android:hint="@string/user_name"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:drawableStart="@drawable/edit"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_corner"
        android:drawableEnd="@drawable/lock_open"
        android:gravity="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/edit"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"

        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableEnd="@drawable/email_2"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:hint="@string/email_arabic"
        android:background="@drawable/edittext_corner"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableEnd="@drawable/phone_2"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:hint="@string/mobile_num"
        android:drawableStart="@drawable/edit"
        android:background="@drawable/edittext_corner"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/blue_corner"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_22sdp"
        android:text="@string/save"/>
</LinearLayout>
</RelativeLayout>
</ScrollView>
